--- a/src/app/search/search-result-list/search-result-list.component.html
+++ b/src/app/search/search-result-list/search-result-list.component.html
@@ -13,14 +13,13 @@
 			<div class="row" *ngIf="selectedOptions.length > 0">
 				<div>
 					<div class=" col-3 p-4">
-						<img src="{{item.imageUrl}}" class="rounded selected-image" alt="Selected Image">
+						
 					</div>
 					<div class="col-9 p-4">
-						<h5>{{item.name}}</h5>
-						<p>{{item.description}}</p>
+						<h5>{{item.university}}</h5>
+						<p>{{item.street_address}}</p>
 						<p>
 							<span>Price: {{item.price}} </span>
-							<span>Quantity: {{item.quantity}} </span>
 
 						</p>
 					</div>
